--- a/html/eazysend.html
+++ b/html/eazysend.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="output.css" />
   <link rel="stylesheet" href="../css/index.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-    rel="stylesheet" />
+  <link href="https://fonts.cdnfonts.com/css/mustica-pro-sans-serif" rel="stylesheet">  
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
   <title>Talent Hub</title>
   <script src="https://cdn.tailwindcss.com"></script>
@@ -45,7 +44,7 @@
   <header class="flex items-center h-24">
     <div class="container">
       <nav class="h-full cursor-pointer flex justify-between items-center">
-        <h2 class="font-semibold text-2xl">Ola Ategun</h2>
+        <a href="../dist/index.html" class="font-semibold text-2xl">Ola Ategun</a>
         <div class="block z-[999] md:hidden" id="menuIcon">
           <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
@@ -71,7 +70,7 @@
         <img src="../images/eazySendHero3.png" alt="hero-img" />
       </div>
     </div>
-    <div class="my-12 container">
+    <div class="md:my-12 container relative">
       <h2 class="title">Eazysend</h2>
       <p class="leading-6 text-base">
         Eazysend is an app for seamless cross-border transactions. Offering a
@@ -81,7 +80,7 @@
         of transactions, providing users with a reliable and efficient
         platform for managing their international financial activities.
       </p>
-      <div class="grid w- full md:w-1/2  grid-cols-2 md:grid-cols-3h-auto mt-12 ">
+      <div class="grid w- full md:w-1/2  grid-cols-2 md:grid-cols-3 h-auto mt-12 ">
         <div>
           <h4 class="font-medium">My role</h4>
           <span> Product Designer</span>
@@ -95,12 +94,31 @@
           <psan>Figma, Adobe <br />Photoshop, Smaply</psan>
         </div>
       </div>
+      <ul class="fixed text-[#757575] space-y-2 right-4 cursor-pointer bottom-[30px]">
+      <li>
+        <a href="#problem">The problem</a>
+      </li>
+        <li>
+            <a href="#design">Design process</a>
+        </li>
+         <li><a href="#user">User research</a></li>
+         <li>
+            <a href="#personas">Personas</a>
+        </li>
+         <li>
+            <a href="#wireframe">Wireframes</a>
+        </li>
+         <li>
+            <a href="#final">Final designs</a>
+        </li>
+     </ul>
     </div>
   </section>
   <!-- overview section -->
-  <section class="background py-12">
+  <div class="background py-12">
     <div class="container">
-      <h4 class="eazy-sub-title">Overview</h4>
+      <section id="problem">
+        <h4 class="eazy-sub-title">Overview</h4>
       <h4>The problem</h4>
       <p class="my-4">
         Current solutions for international money transfers suffer from
@@ -111,10 +129,12 @@
         experience for cross-border transactions while ensuring transparency
         and security..
       </p>
-      <div>
+      </section>
+      <section id="design">
+        <div>
         <h4 class="title">Design process</h4>
         <ul
-          class="block md:flex gap-2 bg-white rounded-md px-2 py-3 justify-center text-center m-auto md:justify-between mb-12">
+          class="block md:flex gap-2 bg-white rounded-md px-8 py-8justify-center text-center m-auto md:justify-between mb-12">
           <li>
             <a>Research
             </a>
@@ -148,39 +168,45 @@
           <li><a>Finalize</a></li>
         </ul>
       </div>
+      </section>
+      
       <div class="block md:flex w-1/2 justify-between">
         <div>
-          <h4 class="text-base font-weight font-medium">Reasearch Methods</h4>
-          <ul>
-            <li>Online survey (Google form)</li>
-            <li>In-person interview</li>
+          <h4 class="text-xl font-weight font-medium">Reasearch Methods</h4>
+          <ul class="list-disc">
+            <li class="mt-2">Online survey (Google form)</li>
+            <li class="my-2">In-person interview</li>
             <li>Research online</li>
           </ul>
         </div>
         <div>
-          <h4 class="text-base font-weight font-medium">Target Users</h4>
-          <ul>
-            <li>Hiring managers</li>
-            <li>IT professionals</li>
+          <h4 class="text-xl font-weight font-medium">Target Users</h4>
+          <ul class="list-disc">
+            <li class="mt-2">Hiring managers</li>
+            <li class="my-2">IT professionals</li>
             <li>Clients outsourcing pojects</li>
           </ul>
         </div>
       </div>
     </div>
-  </section>
-  <div class="container py-12">
-    <h4 class="sub-title">User research</h4>
+  </div>
+  <!-- user research -->
+  <section id="user">
+     <div class="container py-12">
+    <h4 class="eazy-sub-title mb-4">User research</h4>
     <div class="research-list space-y-2"></div>
   </div>
+  </section>
+ 
   <!-- personas section -->
-  <section class="my-12">
+  <section class="my-12" id="personas">
     <div class="py-12 background">
       <div class="container">
         <h4 class="eazy-sub-title">Personas</h4>
         <h4 class="ttitle my-4">User Persona 1</h4>
         <div class="block md:flex w-full justify-between gap-12">
-          <div class="font-medium w-[20%]">
-            <img class="w-[80px] object-cover h-[80px] rounded-full" src="../images/ellipse1.png" alt="persona1" />
+          <div class="font-medium w-[30%]">
+            <img class="w-[120px] object-cover h-[120px] rounded-full" src="../images/ellipse1.png" alt="persona1" />
             <p>
               Mohammed <br />
               <span class="uppercase">Family practitioner</span>
@@ -203,11 +229,10 @@
     </div>
     <div class="py-12">
       <div class="container">
-        <h4 class="eazy-sub-title">Personas</h4>
         <h4 class="ttitle my-4">User Persona 2</h4>
         <div class="block md:flex w-full justify-between gap-12">
-          <div class="font-medium w-[20%]">
-            <img class="w-[80px] object-cover h-[80px] rounded-full" src="../images/ellipse2.png" alt="persona1" />
+          <div class="font-medium w-[30%]">
+            <img class="w-[120px] object-cover h-[120px] rounded-full" src="../images/ellipse2.png" alt="persona1" />
             <p>
               Mohammed <br />
               <span class="uppercase">Family practitioner</span>
@@ -229,75 +254,79 @@
       </div>
     </div>
   </section>
-  <!-- prototypes section -->
-  <section class="background py-12">
-    <div class="container">
-      <h4 class="eazy-sub-title">Prototypes</h4>
-      <h6 class="title">Selected Prototypes</h6>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
-        <img src="../images/screen1.png" alt="img" />
-        <img src="../images/screen2.png" alt="img" />
-        <img src="../images/screen3.png" alt="img" />
-        <img src="../images/screen4.png" alt="img" />
-        <img src="../images/screen5.png" alt="img" />
-        <img src="../images/screen6.png" alt="img" />
-        <img src="../images/screen7.png" alt="img" />
-        <img src="../images/screen8.png" alt="img" />
-        <img src="../images/screen9.png" alt="img" />
+  <section id="wireframe">
+      <!-- prototypes section -->
+    <div class="background py-12">
+      <div class="container">
+        <h4 class="eazy-sub-title">Prototypes</h4>
+        <h6 class="title">Selected Prototypes</h6>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
+          <img src="../images/screen1.png" alt="img" />
+          <img src="../images/screen2.png" alt="img" />
+          <img src="../images/screen3.png" alt="img" />
+          <img src="../images/screen4.png" alt="img" />
+          <img src="../images/screen5.png" alt="img" />
+          <img src="../images/screen6.png" alt="img" />
+          <img src="../images/screen7.png" alt="img" />
+          <img src="../images/screen8.png" alt="img" />
+          <img src="../images/screen9.png" alt="img" />
+        </div>
       </div>
     </div>
-  </section>
-  <!-- brand identity section -->
-  <section class="bg-[#F9F9F9] py-12">
-    <div class="container">
-      <h4 class="eazy-sub-title">Brand</h4>
-      <h4 class="title">Visual identity</h4>
-      <div class=" grid grid-cols-2 md:grid-cols-3 gap-3 h-auto items-center w-full md:w-1/2">
-        <p  class="font-semibold text-[90px] md:text-[128px]">
-          <span class="uppercase">A</span>a
-        </p>
-        <div class="flex flex-col ">
-          <span>Mustica Pro (semi bold)</span>
-          <span>Mustica Pro (medium)</span>
-          <span>Mustica Pro (regular)</span>
-        </div>
-        <div class="relative flex h-auto items-center">
-          <div class="circular-img text-white bg-[#1DA260]">1DA260</div>
-          <div class="circular-img bg-[#FDCA3E] text-white absolute right-[-30px] md:right-[-20px]">
-            FDCA3E
+    <!-- brand identity section -->
+    <div class="bg-[#F9F9F9] py-12">
+      <div class="container">
+        <h4 class="eazy-sub-title mb-12">Brand</h4>
+        <h4 class="title">Visual identity</h4>
+        <div class=" grid grid-cols-2 md:grid-cols-3 gap-3 h-auto items-center w-full md:w-1/2">
+          <p  class="font-semibold text-[90px] md:text-[128px]">
+            <span class="uppercase">A</span>a
+          </p>
+          <div class="flex flex-col ">
+            <span>Mustica Pro (semi bold)</span>
+            <span>Mustica Pro (medium)</span>
+            <span>Mustica Pro (regular)</span>
           </div>
-          <div class="circular-img text-white bg-[#295428] absolute right-[-100px] md:right-[-90px]">
-            295428
+          <div class="relative flex h-auto items-center">
+            <div class="circular-img text-white bg-[#1DA260]">1DA260</div>
+            <div class="circular-img bg-[#FDCA3E] text-white absolute right-[-30px] md:right-[-20px]">
+              FDCA3E
+            </div>
+            <div class="circular-img text-white bg-[#295428] absolute right-[-100px] md:right-[-90px]">
+              295428
+            </div>
+          </div>
+        </div>
+        <h4 class="title text-center">Image representations</h4>
+        <div class="flex justify-center gap-2">
+          <div>
+            <img src="../images/brandIdentity.png" alt="brand" />
+            <h4>illustrations</h4>
           </div>
         </div>
       </div>
-      <h4 class="title text-center">Image representations</h4>
-      <div class="flex justify-center gap-2">
-        <div>
-          <img src="../images/brandIdentity.png" alt="brand" />
-          <h4>illustrations</h4>
-        </div>
+    </div>
+    <div class="background py-12 mb-4">
+      <h4 class="eazy-sub-title container mb-8">High fidelity mockups</h4>
+      <div class="container grid grid-cols-1 md:grid-cols-3 gap-12">
+        <img src="../images/mockup12.png" alt="mockup" />
+        <img src="../images/mockup1.png" alt="mockup" />
+        <img src="../images/mockup2.png" alt="mockup" />
+        <img src="../images/mockup3.png" alt="mockup" />
+        <img src="../images/mockup4.png" alt="mockup" />
+        <img src="../images/mockup5.png" alt="mockup" />
+        <img src="../images/mockup6.png" alt="mockup" />
+        <img src="../images/mockup7.png" alt="mockup" />
+        <img src="../images/mockup8.png" alt="mockup" />
+        <img src="../images/mockup9.png" alt="mockup" />
+        <img src="../images/mockup10.png" alt="mockup" />
+        <img src="../images/mockup11.png" alt="mockup" />
       </div>
     </div>
   </section>
-  <section class="background py-12 mb-4">
-    <h4 class="eazy-sub-title container">High fidelity mockups</h4>
-    <div class="container grid grid-cols-1 md:grid-cols-3 gap-4">
-      <img src="../images/mockup12.png" alt="mockup" />
-      <img src="../images/mockup1.png" alt="mockup" />
-      <img src="../images/mockup2.png" alt="mockup" />
-      <img src="../images/mockup3.png" alt="mockup" />
-      <img src="../images/mockup4.png" alt="mockup" />
-      <img src="../images/mockup5.png" alt="mockup" />
-      <img src="../images/mockup6.png" alt="mockup" />
-      <img src="../images/mockup7.png" alt="mockup" />
-      <img src="../images/mockup8.png" alt="mockup" />
-      <img src="../images/mockup9.png" alt="mockup" />
-      <img src="../images/mockup10.png" alt="mockup" />
-      <img src="../images/mockup11.png" alt="mockup" />
-    </div>
-  </section>
-  <div class="container my-12">
+  
+  <section id="final">
+    <div class="container my-12">
     <h6 class="eazy-sub-title">Conclusion</h6>
     <h6 class="title">Takeaway</h6>
     <p>
@@ -319,6 +348,8 @@
       solutions that truly address the needs of users.
     </p>
   </div>
+  </section>
+  
   <!-- footer section -->
   <footer class="bg-black text-[14px] md:text-xl">
     <div class="container text-lightWhite pt-4 space-y-2">
