--- a/html/talenthub.html
+++ b/html/talenthub.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="output.css" />
     <link rel="stylesheet" href="../css/index.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/mustica-pro-sans-serif" rel="stylesheet">  
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
     <title>Talent Hub</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -42,7 +41,7 @@
     <header class="flex items-center h-24">
         <div class="container">
             <nav class="h-full cursor-pointer flex justify-between items-center">
-                <h2 class="font-semibold text-2xl">Ola Ategun</h2>
+                <a href="../dist/index.html" class="font-semibold text-2xl">Ola Ategun</a>
                 <div class="block z-[999] md:hidden" id="menuIcon">
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </div>
@@ -72,7 +71,7 @@
         </div>
 
     </section>
-    <div class="md:my-16 container">
+    <div class="md:my-16 container relative">
         <h2 class="title">Maxie Talent Hub</h2>
         <p class="leading-6 text-base">
             Moxie is a global leader in talent facilitation connecting companies with a curated pool of
@@ -95,12 +94,30 @@
             </div>
         </div>
 
-
+     <ul class="fixed text-[#757575] space-y-2 right-4 cursor-pointer bottom-[30px]">
+      <li>
+        <a href="#problem">The problem</a>
+      </li>
+        <li>
+            <a href="#design">Design process</a>
+        </li>
+         <li><a href="#user">User research</a></li>
+         <li>
+            <a href="#personas">Personas</a>
+        </li>
+         <li>
+            <a href="#wireframe">Wireframes</a>
+        </li>
+         <li>
+            <a href="#final">Final designs</a>
+        </li>
+     </ul>
     </div>
     <!-- overview section -->
     <div class="mt-12 bg-[#F9F9F9] py-12">
         <div class="container">
-            <h4 class="sub-title">Overview</h4>
+        <section id="problem">
+                <h4 class="sub-title">Overview</h4>
             <h4>The problem</h4>
             <p class="my-4">
                 When Moxie started, they faced a big challenge—lacking a dedicated online platform, the entirety of our
@@ -111,10 +128,12 @@
                 transcend the limitations posed by conventional communication methods.
 
             </p>
+         </section>
+         <section id="design">
             <div>
-                <h4 class="title">Design process</h4>
+                <h4 class="title mb-8 mt-20">Design process</h4>
                 <ul
-                    class="block md:flex gap-2 bg-white rounded-md px-2 py-3 justify-center text-center m-auto md:justify-between mb-12">
+                    class="block md:flex gap-2 bg-white rounded-md px-8 py-8 justify-center text-center m-auto md:justify-between mb-12">
                     <li>
                         <a>Research
                         </a>
@@ -151,39 +170,43 @@
             </div>
             <div class="block md:flex w-1/2 justify-between">
                 <div>
-                    <h4 class="text-base font-weight font-medium">Reasearch Methods</h4>
-                    <ul>
-                        <li>Online survey (Google form)</li>
-                        <li>In-person interview</li>
+                    <h4 class="text-xl font-weight font-medium">Reasearch Methods</h4>
+                    <ul class="list-disc">
+                        <li class="mt-2">Online survey (Google form)</li>
+                        <li class="my-2">In-person interview</li>
                         <li>Research online</li>
                     </ul>
                 </div>
                 <div>
-                    <h4 class="text-base font-weight font-medium">Target Users</h4>
-                    <ul>
-                        <li>Hiring managers</li>
-                        <li>IT professionals </li>
+                    <h4 class="text-xl font-weight font-medium">Target Users</h4>
+                    <ul class="list-disc">
+                        <li class="mt-2 list-disc">Hiring managers</li>
+                        <li class="my-2">IT professionals </li>
                         <li>Clients outsourcing pojects</li>
                     </ul>
                 </div>
             </div>
+         </section>
         </div>
     </div>
     <!-- User research -->
-    <div class="container py-12">
+    <section id="user">
+        <div class="container py-12">
         <h4 class="sub-title">User research</h4>
         <div class="research-list space-y-2"></div>
     </div>
+    </section>
+    
     <!-- personas section -->
-    <section class="my-12">
+    <section class="my-12" id="personas">
         <div class="py-12 bg-[#F9F9F9]">
             <div class="container">
                 <h4 class="sub-title">Personas</h4>
                 <h4 class="ttitle my-4">User Persona 1</h4>
                 <div class="block md:flex w-full justify-between gap-12">
 
-                    <div class="font-medium w-[20%]">
-                        <img class="w-[80px] object-cover h-[80px] rounded-full" src="../images/persona1.png"
+                    <div class="font-medium w-[30%]">
+                        <img class="w-[120px] object-cover h-[120px] rounded-full" src="../images/persona1.png"
                             alt="persona1" />
                         <p>Sarah <br />
                             <span class="uppercase">Hr manager</span>
@@ -201,8 +224,7 @@
                             process for technical positions within the company.</p>
                         <div class="persona1-details"></div>
                     </div>
-
-                </div>
+                 </div>
 
             </div>
         </div>
@@ -212,8 +234,8 @@
                 <h4 class="ttitle my-4">User Persona 2</h4>
                 <div class=" block md:flex w-full justify-between gap-12">
 
-                    <div class="font-medium w-[20%]">
-                        <img class="w-[80px] object-cover h-[80px] rounded-full" src="../images/persona2.png"
+                    <div class="font-medium w-[30%]">
+                        <img class="w-[120px] object-cover h-[120px] rounded-full" src="../images/persona2.png"
                             alt="persona1" />
                         <p>David<br />
                             <span class="uppercase">Web developer</span>
@@ -237,114 +259,114 @@
             </div>
         </div>
     </section>
-
-    <!-- prototype section desktop -->
-    <section class="bg-[#F9F9F9] py-12">
-        <div class=" container">
-            <h6 class="sub-title">Prototypes</h6>
-            <h4 class="title my-3">Selected Wireframes</h4>
-            <h4 class="sub-title">Desktop screens</h4>
-            <div class="grid grid-cols-2 gap-4">
-                <img src="../images/desktop1.png" alt="desktop-img" />
-                <img src="../images/desktop2.png" alt="desktop-img" />
-                <img src="../images/desktop3.png" alt="desktop-img" />
-                <img src="../images/desktop4.png" alt="desktop-img" />
-                <img src="../images/desktop5.png" alt="desktop-img" />
-                <img src="../images/desktop6.png" alt="desktop-img" />
-                <img src="../images/desktop7.png" alt="desktop-img" />
-                <img src="../images/desktop8.png" alt="desktop-img" />
-            </div>
-
-        </div>
-    </section>
-    <!-- prototype section mobile -->
-    <div class=" container space-y-4">
-
-        <h4 class="title">Selected Wireframes</h4>
-        <h4 class="sub-title my-3">Desktop screens</h4>
-        <div class="grid grid-cols-3 gap-4">
-            <!-- <div class="mobile-img"></div> -->
-            <img src="../images/mobile1.png" alt="desktop-img" />
-            <img src="../images/mobile2.png" alt="desktop-img" />
-            <img src="../images/mobile3.png" alt="desktop-img" />
-            <img src="../images/mobile4.png" alt="desktop-img" />
-            <img src="../images/mobile5.png" alt="desktop-img" />
-            <img src="../images/mobile6.png" alt="desktop-img" />
-        </div>
-
-    </div>
-    </section>
-    <!-- brand identity section -->
-    <section class="bg-[#F9F9F9] py-12">
-        <div class="container">
-            <h4 class="sub-title">Brand</h4>
-            <h4 class="title">Visual identity</h4>
-            <div class=" grid grid-cols-2 md:grid-cols-3 gap-3 h-auto items-center w-full md:w-1/2">
-                <p class="font-semibold text-[90px] md:text-[128px]"><span class="uppercase">A</span>a</p>
-                <div class="flex flex-col ">
-                    <span>Mustica Pro (semi bold)</span>
-                    <span>Mustica Pro (medium)</span>
-                    <span>Mustica Pro (regular)</span>
-                </div>
-                <div class="relative flex h-auto items-center">
-                    <div class="circular-img text-white bg-[#004EC6]">004EC6</div>
-                    <div class="circular-img bg-black text-white absolute right-[-30px] md:right-[-20px]">1E1E1E</div>
-                    <div class="circular-img text-[#7E7E7E] bg-[#FFDAB9] absolute right-[-100px] md:right-[-90px]">
-                        FFDAB9</div>
+    <section id="wireframe">
+        <!-- prototype section desktop -->
+        <div class="bg-[#F9F9F9] py-12">
+            <div class=" container">
+                <h6 class="sub-title">Prototypes</h6>
+                <h4 class="title my-3">Selected Wireframes</h4>
+                <h4 class="sub-title">Desktop screens</h4>
+                <div class="grid grid-cols-2 gap-4">
+                    <img src="../images/desktop1.png" alt="desktop-img" />
+                    <img src="../images/desktop2.png" alt="desktop-img" />
+                    <img src="../images/desktop3.png" alt="desktop-img" />
+                    <img src="../images/desktop4.png" alt="desktop-img" />
+                    <img src="../images/desktop5.png" alt="desktop-img" />
+                    <img src="../images/desktop6.png" alt="desktop-img" />
+                    <img src="../images/desktop7.png" alt="desktop-img" />
+                    <img src="../images/desktop8.png" alt="desktop-img" />
                 </div>
 
             </div>
-            <h4 class="title">Image representations</h4>
-            <div class="flex justify-center gap-2">
-                <div>
-                    <img src="../images/visualImage3.png" alt="" />
-                    <h4>Professional(human) images</h4>
+        </div>
+        <!-- prototype section mobile -->
+        <div class=" container space-y-4">
+
+            <h4 class="title">Selected Wireframes</h4>
+            <h4 class="sub-title my-3">Desktop screens</h4>
+            <div class="grid grid-cols-3 gap-4">
+                <!-- <div class="mobile-img"></div> -->
+                <img src="../images/mobile1.png" alt="desktop-img" />
+                <img src="../images/mobile2.png" alt="desktop-img" />
+                <img src="../images/mobile3.png" alt="desktop-img" />
+                <img src="../images/mobile4.png" alt="desktop-img" />
+                <img src="../images/mobile5.png" alt="desktop-img" />
+                <img src="../images/mobile6.png" alt="desktop-img" />
+            </div>
+
+        </div>
+        <!-- brand identity section -->
+        <div class="bg-[#F9F9F9] py-12">
+            <div class="container">
+                <h4 class="sub-title">Brand</h4>
+                <h4 class="title">Visual identity</h4>
+                <div class=" grid grid-cols-2 md:grid-cols-3 gap-3 h-auto items-center w-full md:w-1/2">
+                    <p class="font-semibold text-[90px] md:text-[128px]"><span class="uppercase">A</span>a</p>
+                    <div class="flex flex-col ">
+                        <span>Mustica Pro (semi bold)</span>
+                        <span>Mustica Pro (medium)</span>
+                        <span>Mustica Pro (regular)</span>
+                    </div>
+                    <div class="relative flex h-auto items-center">
+                        <div class="circular-img text-white bg-[#004EC6]">004EC6</div>
+                        <div class="circular-img bg-black text-white absolute right-[-30px] md:right-[-20px]">1E1E1E</div>
+                        <div class="circular-img text-[#7E7E7E] bg-[#FFDAB9] absolute right-[-100px] md:right-[-90px]">
+                            FFDAB9</div>
+                    </div>
+
                 </div>
-                <div>
-                    <img src="../images/visualImage2.png" alt="" />
-                    <h4>illustrations</h4>
+                <h4 class="title">Image representations</h4>
+                <div class="flex justify-center gap-2">
+                    <div>
+                        <img src="../images/visualImage3.png" alt="" />
+                        <h4>Professional(human) images</h4>
+                    </div>
+                    <div>
+                        <img src="../images/visualImage2.png" alt="" />
+                        <h4>illustrations</h4>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- fidelity mockups desktop -->
-    <section>
-        <div class="container my-12">
-            <h4 class="sub-title">High fidelity desktops</h4>
-            <h4 class="title">Desktop Screens</h4>
-            <div class="flex flex-col gap-2">
-                <div class="w-400px h-auto">
-                    <img src="../images/aboutUs.png" alt="mockup" class="h-full w-full object-cover" />
-                </div>
+        <!-- fidelity mockups desktop -->
+        <div>
+            <div class="container my-12">
+                <h4 class="sub-title">High fidelity desktops</h4>
+                <h4 class="title">Desktop Screens</h4>
+                <div class="flex flex-col gap-2">
+                    <div class="w-400px h-auto">
+                        <img src="../images/aboutUs.png" alt="mockup" class="h-full w-full object-cover" />
+                    </div>
 
 
-                <img src="../images/talents.png" alt="mockup" />
-                <img src="../images/createAccount.png" alt="mockup" />
-                <img src="../images/dashboard1.png" alt="mockup" />
-                <img src="../images/dashboard2.png" alt="mockup" />
-                <img src="../images/dashboard3.png" alt="mockup" />
-                <img src="../images/profileView.png" alt="mockup" />
-                <img src="../images/team.png" alt="mockup" />
+                    <img src="../images/talents.png" alt="mockup" />
+                    <img src="../images/createAccount.png" alt="mockup" />
+                    <img src="../images/dashboard1.png" alt="mockup" />
+                    <img src="../images/dashboard2.png" alt="mockup" />
+                    <img src="../images/dashboard3.png" alt="mockup" />
+                    <img src="../images/profileView.png" alt="mockup" />
+                    <img src="../images/team.png" alt="mockup" />
+                </div>
+            </div>
+        </div>
+        <!-- fidelity mockups mobile -->
+        <!-- conclusion -->
+        <div class="bg-[#F9F9F9] py-12">
+            <div class="container">
+                <h4 class="sub-title">High fidelity mockups</h4>
+                <h4 class="title">Mobile Screens</h4>
+                <div class="grid grid-cols-2 gap-4 my-8">
+                    <img src="../images/homepageMobile.png" alt="mockup" />
+                    <img src="../images/leadersMobile.png" alt="mockup" />
+                    <img src="../images/talentsMobile.png" alt="mockup" />
+                    <img src="../images/aboutUsMobile.png" alt="mockup" />
+                    <img src="../images/orgMobile.png" alt="mockup" />
+                </div>
             </div>
         </div>
     </section>
-    <!-- fidelity mockups mobile -->
-    <!-- conclusion -->
-    <section class="bg-[#F9F9F9] py-12">
-        <div class="container">
-            <h4 class="sub-title">High fidelity mockups</h4>
-            <h4 class="title">Mobile Screens</h4>
-            <div class="grid grid-cols-2 gap-4 my-8">
-                <img src="../images/homepageMobile.png" alt="mockup" />
-                <img src="../images/leadersMobile.png" alt="mockup" />
-                <img src="../images/talentsMobile.png" alt="mockup" />
-                <img src="../images/aboutUsMobile.png" alt="mockup" />
-                <img src="../images/orgMobile.png" alt="mockup" />
-            </div>
-        </div>
-    </section>
-    <div class="container my-12">
-        <h6 class="sub-title">Conclusion</h6>
+    <section id="final" class="container my-12">
+            <h6 class="sub-title">Conclusion</h6>
         <h6 class="title">Takeaway</h6>
         <p>
             In the process of developing this project, I found that conducting thorough user research and embracing
@@ -360,7 +382,8 @@
             of user-centric design principles to deliver impactful solutions that truly address the needs of users.
         </p>
         <h6 class="sub-title">Walkthrough</h6>
-    </div>
+        
+    </section>
 
     <footer class="bg-black">
         <div class="container text-lightWhite pt-4 space-y-2">
