add the hover state on the navlinks

--- a/html/eazysend.html
+++ b/html/eazysend.html
@@ -49,14 +49,16 @@
           <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
         <ul class="nav-list w-1/2 hidden md:flex justify-between">
-          <li class="py-2 md:py-0"><a href="../dist/index.html">Home</a></li>
-          <li class="py-2 md:py-0"><a href="../html/about.html">About</a></li>
           <li class="py-2 md:py-0">
-            <a href="../html/talenthub.html">Projects</a>
+            <a href="../dist/index.html" class="hover:text-[#E1A635]">Home</a></li>
+          <li class="py-2 md:py-0">
+            <a href="../html/about.html" class="hover:text-[#E1A635]" >About</a></li>
+          <li class="py-2 md:py-0">
+            <a href="../html/talenthub.html" class="hover:text-[#E1A635]">Projects</a>
           </li>
-          <li class="py-2 md:py-0"><a>Resume</a></li>
+          <li class="py-2 md:py-0"><a class="hover:text-[#E1A635]" >Resume</a></li>
           <li class="py-2 md:py-0">
-            <a href="../html/contact.html">Contact</a>
+            <a href="../html/contact.html" class="hover:text-[#E1A635]" >Contact</a>
           </li>
         </ul>
       </nav>
