--- a/html/talenthub.html
+++ b/html/talenthub.html
@@ -46,11 +46,19 @@
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </div>
                 <ul class="nav-list w-1/2 hidden md:flex justify-between">
-                    <li class="py-2 md:py-0"><a href="../dist/index.html">Home</a></li>
-                    <li class="py-2 md:py-0"><a href="../html/about.html">About</a></li>
-                    <li class="py-2 md:py-0"><a href="../html/eazysend.html">Projects</a></li>
-                    <li class="py-2 md:py-0"><a>Resume</a></li>
-                    <li class="py-2 md:py-0"><a href="../html/contact.html">Contact</a></li>
+                    <li class="py-2 md:py-0">
+                        <a class="hover:text-[#E1A635]"  href="../dist/index.html">Home</a>
+                    </li>
+                    <li class="py-2 md:py-0">
+                        <a class="hover:text-[#E1A635]"  href="../html/about.html">About</a>
+                    </li>
+                    <li class="py-2 md:py-0">
+                        <a class="hover:text-[#E1A635]"  href="../html/eazysend.html">Projects</a>
+                    </li>
+                    <li class="py-2 md:py-0">
+                        <a class="hover:text-[#E1A635]" >Resume</a></li>
+                    <li class="py-2 md:py-0">
+                        <a class="hover:text-[#E1A635]"  href="../html/contact.html">Contact</a></li>
                 </ul>
             </nav>
         </div>
