--- a/html/about.html
+++ b/html/about.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="output.css" />
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/mustica-pro-sans-serif" rel="stylesheet">  
     <title>About</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style type="text/tailwindcss">
@@ -31,16 +30,19 @@
    <header class="flex items-center h-24">
     <div class="container">
       <nav class="h-full cursor-pointer flex justify-between items-center">
-        <h2 class="font-semibold text-2xl">Ola Ategun</h2>
+        <a href="../dist/index.html" class="font-semibold text-2xl">Ola Ategun</a>
         <div class="block z-[999] md:hidden" id="menuIcon">
           <i class="fa fa-bars" aria-hidden="true"></i>
         </div>
         <ul class="nav-list w-1/2 hidden md:flex justify-between">
-          <li class="py-2 md:py-0"><a href="../dist/index.html">Home</a></li>
-          <li class="py-2 md:py-0"><a href="#">About</a></li>
-          <li class="py-2 md:py-0"><a href="../html/eazysend.html">Projects</a></li>
+          <li class="py-2 md:py-0">
+            <a  class="hover:text-[#E1A635]" href="../dist/index.html">Home</a>
+        </li>
+          <li class="py-2 md:py-0">
+            <a href="#" class="hover:text-[#E1A635]" >About</a></li>
+          <li class="py-2 md:py-0"><a class="hover:text-[#E1A635]"  href="../html/eazysend.html">Projects</a></li>
           <li class="py-2 md:py-0"><a>Resume</a></li>
-          <li class="py-2 md:py-0"><a href="../html/contact.html">Contact</a></li>
+          <li class="py-2 md:py-0"><a class="hover:text-[#E1A635]"  href="../html/contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
