--- a/html/contact.html
+++ b/html/contact.html
@@ -2,16 +2,14 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="output.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
-    <title>Contact</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="output.css" />
+  <link rel="stylesheet" href="../css/index.css" />
+  <link href="https://fonts.cdnfonts.com/css/mustica-pro-sans-serif" rel="stylesheet">  
+  <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
+  <title>Contact</title>
+  <script src="https://cdn.tailwindcss.com"></script>
     <style type="text/tailwindcss">
         @layer components {
     .container {
@@ -27,23 +25,31 @@
         @apply w-full px-3 py-2 bg-input border-none
     }
 }
-      </style>
+    </style>
 </head>
 
 <body>
     <header class="flex items-center h-24">
         <div class="container">
             <nav class="h-full cursor-pointer flex justify-between items-center">
-                <h2 class="font-semibold text-2xl">Ola Ategun</h2>
+                <a href="../dist/index.html" class="font-semibold text-2xl">Ola Ategun</a>
                 <div class="block z-[999] md:hidden" id="menuIcon">
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </div>
                 <ul class="nav-list w-1/2 hidden md:flex justify-between">
-                    <li class="py-2 md:py-0"><a href="#">Home</a></li>
-                    <li class="py-2 md:py-0"><a href="../html/about.html">About</a></li>
-                    <li class="py-2 md:py-0"><a href="../html/eazysend.html">Projects</a></li>
-                    <li class="py-2 md:py-0"><a>Resume</a></li>
-                    <li class="py-2 md:py-0"><a href="../html/about.html">Contact</a></li>
+                    <li class="py-2 md:py-0"><a class="hover:text-[#E1A635]"  href="#">Home</a></li>
+                    <li class="py-2 md:py-0">
+                        <a class="hover:text-[#E1A635]"  href="../html/about.html">About</a>
+                    </li>
+                    <li class="py-2 md:py-0">
+                        <a class="hover:text-[#E1A635]"  href="../html/eazysend.html">Projects</a>
+                    </li>
+                    <li class="py-2 md:py-0">
+                        <a class="hover:text-[#E1A635]" >Resume</a>
+                    </li>
+                    <li class="py-2 md:py-0">
+                        <a class="hover:text-[#E1A635]"  href="../html/about.html">Contact</a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -90,10 +96,10 @@
                     <span><i class="fa fa-asterisk text-red-500 text-[8px]" aria-hidden="true"></i>
                     </span>
                 </label>
-                <textarea class="w-full bg-input" rows="6" md:rows="4"></textarea>
+                <textarea class="w-full focus:none border-none bg-input p-4" rows="6" md:rows="4"></textarea>
             </div>
             <button type="submit"
-                class="py-3 px-2 w-full rounded-md text-center text-white border-2 my-3 bg-secondary border-secondary">Send
+                class="py-3 px-2 w-full rounded-md text-center text-white border-2 my-3 bg-[#1E1E1E]">Send
                 a
                 message</button>
         </form>
