fix responsiveness of the nav layout

--- a/html/eazysend.html
+++ b/html/eazysend.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/index.css" />
   <link href="https://fonts.cdnfonts.com/css/mustica-pro-sans-serif" rel="stylesheet">  
   <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css" />
-  <title>Talent Hub</title>
+  <title>Eazysend</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style type="text/tailwindcss">
     @layer components {
@@ -73,7 +73,7 @@
       </div>
     </div>
     <div class="md:my-12 container relative">
-      <h2 class="title">Eazysend</h2>
+      <h2 class="title mt-8 md:mt:0">Eazysend</h2>
       <p class="leading-6 text-base">
         Eazysend is an app for seamless cross-border transactions. Offering a
         user-friendly interface, it empowers users to effortlessly send,
@@ -172,7 +172,7 @@
       </div>
       </section>
       
-      <div class="block md:flex w-1/2 justify-between">
+      <div class="block md:flex w-full px-4 md:px-0md:w-1/2 justify-between">
         <div>
           <h4 class="text-xl font-weight font-medium">Reasearch Methods</h4>
           <ul class="list-disc">
@@ -182,7 +182,7 @@
           </ul>
         </div>
         <div>
-          <h4 class="text-xl font-weight font-medium">Target Users</h4>
+          <h4 class="text-xl mt-4 md:mt-0 font-weight font-medium">Target Users</h4>
           <ul class="list-disc">
             <li class="mt-2">Hiring managers</li>
             <li class="my-2">IT professionals</li>
@@ -207,7 +207,7 @@
         <h4 class="eazy-sub-title">Personas</h4>
         <h4 class="ttitle my-4">User Persona 1</h4>
         <div class="block md:flex w-full justify-between gap-12">
-          <div class="font-medium w-[30%]">
+          <div class="font-medium w-full md:w-[30%]">
             <img class="w-[120px] object-cover h-[120px] rounded-full" src="../images/ellipse1.png" alt="persona1" />
             <p>
               Mohammed <br />
@@ -233,7 +233,7 @@
       <div class="container">
         <h4 class="ttitle my-4">User Persona 2</h4>
         <div class="block md:flex w-full justify-between gap-12">
-          <div class="font-medium w-[30%]">
+          <div class="font-medium w-full md:w-[30%]">
             <img class="w-[120px] object-cover h-[120px] rounded-full" src="../images/ellipse2.png" alt="persona1" />
             <p>
               Mohammed <br />
