--- a/html/talenthub.html
+++ b/html/talenthub.html
@@ -80,7 +80,7 @@
 
     </section>
     <div class="md:my-16 container relative">
-        <h2 class="title">Maxie Talent Hub</h2>
+        <h2 class="title mt-24 md:mt:0">Maxie Talent Hub</h2>
         <p class="leading-6 text-base">
             Moxie is a global leader in talent facilitation connecting companies with a curated pool of
             ready-to-work, thoroughly vetted, and trusted professionals. With a commitment to excellence, Moxie
@@ -102,7 +102,7 @@
             </div>
         </div>
 
-     <ul class="fixed text-[#757575] space-y-2 right-4 cursor-pointer bottom-[30px]">
+     <ul class="fixed text-[#757575] space-y-2 right-0 md:right-4 cursor-pointer bottom-[30px]">
       <li>
         <a href="#problem">The problem</a>
       </li>
@@ -176,7 +176,7 @@
                 </ul>
 
             </div>
-            <div class="block md:flex w-1/2 justify-between">
+            <div class="block md:flex  px-4 md:px-0 w-full md:w-1/2 justify-between">
                 <div>
                     <h4 class="text-xl font-weight font-medium">Reasearch Methods</h4>
                     <ul class="list-disc">
@@ -186,7 +186,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h4 class="text-xl font-weight font-medium">Target Users</h4>
+                    <h4 class="text-xl mt-4 md:mt-0 font-weight font-medium">Target Users</h4>
                     <ul class="list-disc">
                         <li class="mt-2 list-disc">Hiring managers</li>
                         <li class="my-2">IT professionals </li>
@@ -213,7 +213,7 @@
                 <h4 class="ttitle my-4">User Persona 1</h4>
                 <div class="block md:flex w-full justify-between gap-12">
 
-                    <div class="font-medium w-[30%]">
+                    <div class="font-medium w-full md:w-[30%]">
                         <img class="w-[120px] object-cover h-[120px] rounded-full" src="../images/persona1.png"
                             alt="persona1" />
                         <p>Sarah <br />
@@ -242,7 +242,7 @@
                 <h4 class="ttitle my-4">User Persona 2</h4>
                 <div class=" block md:flex w-full justify-between gap-12">
 
-                    <div class="font-medium w-[30%]">
+                    <div class="font-medium w-full md:w-[30%]">
                         <img class="w-[120px] object-cover h-[120px] rounded-full" src="../images/persona2.png"
                             alt="persona1" />
                         <p>David<br />
@@ -393,45 +393,45 @@
         
     </section>
 
-    <footer class="bg-black">
-        <div class="container text-lightWhite pt-4 space-y-2">
-            <p class="font-[600] text-2xl">Let's connect</p>
-            <ul class="flex gap-8 cursor-pointer text-lightWhite h-auto items-center text-[18px] font-medium">
-                <li>
-                    <a>Behance</a>
-                </li>
-                <li>
-                    <a>Dribble</a>
-                </li>
-                <li>
-                    <a>LinkedIn</a>
-                </li>
+   <footer class="bg-black text-[14px] md:text-xl">
+    <div class="container text-lightWhite pt-4 space-y-2">
+      <p class="font-medium md:font-[600] text-[14px] md:text-xl">Let's connect</p>
+      <ul class="flex gap-8 cursor-pointer text-lightWhite h-auto items-center text-[14px] md:text-xl  font-medium">
+        <li>
+          <a>Behance</a>
+        </li>
+        <li>
+          <a>Dribble</a>
+        </li>
+        <li>
+          <a>LinkedIn</a>
+        </li>
 
-            </ul>
+      </ul>
 
-            <div class="flex justify-between">
-                <p class="text-[18px] font-medium">Email- ategunabass@gmail.com</p>
-                <ul class="flex gap-8 cursor-pointer text-[18px] font-medium">
+      <div class="block md:flex justify-between text-[14px] md:text-xl">
+        <p class=" font-medium">Email- ategunabass@gmail.com</p>
+        <ul class="flex gap-8 cursor-pointer font-medium">
 
-                    <li class=>
-                        <a>About</a>
-                    </li>
-                    <li>
-                        <a>Projects</a>
-                    </li>
-                    <li>
-                        <a>Resume</a>
-                    </li>
-                    <li>
-                        <a>Contact</a>
-                    </li>
-                </ul>
+          <li class=>
+            <a>About</a>
+          </li>
+          <li>
+            <a>Projects</a>
+          </li>
+          <li>
+            <a>Resume</a>
+          </li>
+          <li>
+            <a href="../src//html/contact.html">Contact</a>
+          </li>
+        </ul>
 
-            </div>
-            <hr class="mt-4" />
-            <p class="py-4 text-center text-[18px] font-medium">Made with care I 2023 Abass Ategun</p>
-        </div>
-    </footer>
+      </div>
+      <hr class="mt-4" />
+      <p class="py-4 text-center text-[14px] md:text-xl font-medium">Made with care I 2023 Abass Ategun</p>
+    </div>
+  </footer>
 </body>
 <script>
     tailwind.config = {
