vertically center the nav layout

--- a/html/eazysend.html
+++ b/html/eazysend.html
@@ -96,23 +96,23 @@
           <psan>Figma, Adobe <br />Photoshop, Smaply</psan>
         </div>
       </div>
-      <ul class="fixed text-[#757575] space-y-2 right-4 cursor-pointer bottom-[30px]">
-      <li>
-        <a href="#problem">The problem</a>
-      </li>
+      <ul class="fixed text-[#757575] space-y-2 right-4 cursor-pointer bottom-[30px] transform translate-y-1/2">
         <li>
-            <a href="#design">Design process</a>
+          <a href="#problem">The problem</a>
         </li>
-         <li><a href="#user">User research</a></li>
-         <li>
-            <a href="#personas">Personas</a>
-        </li>
-         <li>
-            <a href="#wireframe">Wireframes</a>
-        </li>
-         <li>
-            <a href="#final">Final designs</a>
-        </li>
+          <li>
+              <a href="#design">Design process</a>
+          </li>
+          <li><a href="#user">User research</a></li>
+          <li>
+              <a href="#personas">Personas</a>
+          </li>
+          <li>
+              <a href="#wireframe">Wireframes</a>
+          </li>
+          <li>
+              <a href="#final">Final designs</a>
+          </li>
      </ul>
     </div>
   </section>
