fix: responsive image and space alignment

--- a/html/talenthub.html
+++ b/html/talenthub.html
@@ -102,7 +102,7 @@
             </div>
         </div>
 
-     <ul class="fixed text-[#757575] space-y-2 right-0 md:right-4 cursor-pointer bottom-[30px]">
+     <ul class="fixed text-[#757575] space-y-2 right-4 cursor-pointer top-1/2  transform -translate-x-1/2 -translate-y-1/2">
       <li>
         <a href="#problem">The problem</a>
       </li>
