--- a/html/eazysend.html
+++ b/html/eazysend.html
@@ -96,7 +96,7 @@
           <psan>Figma, Adobe <br />Photoshop, Smaply</psan>
         </div>
       </div>
-      <ul class="fixed text-[#757575] space-y-2 right-4 cursor-pointer bottom-[30px] transform translate-y-1/2">
+      <ul class="fixed text-[#757575] space-y-2 right-4 cursor-pointer top-1/2  transform -translate-x-1/2 -translate-y-1/2">
         <li>
           <a href="#problem">The problem</a>
         </li>
