add responsive navbar on tablet layout

--- a/html/talenthub.html
+++ b/html/talenthub.html
@@ -275,7 +275,7 @@
                 <h6 class="sub-title">Prototypes</h6>
                 <h4 class="title my-3">Selected Wireframes</h4>
                 <h4 class="sub-title">Desktop screens</h4>
-                <div class="grid grid-cols-2 gap-4">
+                <div class="grid grid-cols-2 gap-4">    
                     <img src="../images/desktop1.png" alt="desktop-img" />
                     <img src="../images/desktop2.png" alt="desktop-img" />
                     <img src="../images/desktop3.png" alt="desktop-img" />
@@ -342,7 +342,8 @@
             <div class="container my-12">
                 <h4 class="sub-title">High fidelity desktops</h4>
                 <h4 class="title">Desktop Screens</h4>
-                <div class="flex flex-col gap-2">
+                <div class="flex flex-col gap-8">
+                     <img src="../images/homePageMoxie.png" alt="desktop-img" />
                     <div class="w-400px h-auto">
                         <img src="../images/aboutUs.png" alt="mockup" class="h-full w-full object-cover" />
                     </div>
@@ -370,6 +371,7 @@
                     <img src="../images/talentsMobile.png" alt="mockup" />
                     <img src="../images/aboutUsMobile.png" alt="mockup" />
                     <img src="../images/orgMobile.png" alt="mockup" />
+                     <img src="../images/detailsMobile.png" alt="mockup" />
                 </div>
             </div>
         </div>
