fix tab nav layout

--- a/html/contact.html
+++ b/html/contact.html
@@ -33,11 +33,11 @@
         <div class="container">
             <nav class="h-full cursor-pointer flex justify-between items-center">
                 <a href="../dist/index.html" class="font-semibold text-2xl">Ola Ategun</a>
-                <div class="block z-[999] md:hidden" id="menuIcon">
+                <div class="z-[999] hidden" id="menuIcon">
                     <i class="fa fa-bars" aria-hidden="true"></i>
                 </div>
-                <ul class="nav-list w-1/2 hidden md:flex justify-between">
-                    <p class="text-xl  cursor-pointer text-end block md:hidden pr-2 close-icon">x</p>
+                <ul class="nav-list w-1/2 flex justify-between">
+                    <p class="text-xl cursor-pointer text-end block md:hidden pr-2 close-icon">x</p>
                     <li class="py-2 md:py-0"><a class="nav-link" href="../dist/index.html">Home</a></li>
                     <li class="py-2 md:py-0">
                         <a class="nav-link" href="../html/about.html">About</a>
